--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 authors = ["alvaro.mongil <alvaro.mongil@cloudreach.com>"]
 
 [dependencies]
+clap = {version = "~2.19.0", features = ["yaml"]}
