--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "bluenine"
 version = "0.1.0"
 authors = ["alvaro.mongil <alvaro.mongil@cloudreach.com>"]
 
+[lib]
+name = "bluenine"
+path = "src/lib.rs"
+
 [dependencies]
 clap = {version = "~2.19.0", features = ["yaml"]}
