Add Rusoto AWS SDK

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bluenine"
 version = "0.1.0"
-authors = ["alvaro.mongil <alvaro.mongil@cloudreach.com>"]
+authors = ["Alvaro Mongil <hello@alvaromongil.com>"]
 
 [lib]
 name = "bluenine"
@@ -9,3 +9,6 @@ path = "src/lib.rs"
 
 [dependencies]
 clap = {version = "~2.19.0", features = ["yaml"]}
+rusoto_core = "0.28.0"
+rusoto_sts = "0.28.0"
+rusoto_dynamodb = "0.28.0"
